[gd_scene load_steps=8 format=3 uid="uid://chbvt3y0tsaip"]

[ext_resource type="Script" path="res://Objects/Player/GUI_panels/information_panel/information_panel.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dpaiod0xc1xgs" path="res://Graphics/Fonts/pixel_2.ttf" id="3"]
[ext_resource type="Theme" uid="uid://cffw2fgsm5tup" path="res://Graphics/Styles/DefaultButton.tres" id="4"]

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.192157, 0.0862745, 0.109804, 1)

[sub_resource type="FontFile" id="1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/21/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/22/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/22/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/23/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/23/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/24/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/24/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/27/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/27/0/kerning_overrides/28/0 = Vector2(0, 0)
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/28/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/22/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/23/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/24/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/27/0 = Vector2(0, 0)
cache/0/28/0/kerning_overrides/28/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.192157, 0.0862745, 0.109804, 1)

[sub_resource type="FontFile" id="2"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[node name="information_panel" type="Panel"]
offset_right = 322.0
offset_bottom = 91.0
mouse_filter = 2
theme_override_styles/panel = SubResource("4")
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 322.0
offset_bottom = 90.0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 28
text = "Государство Государство"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_speed" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4")
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 28
text = "Скорость: 1.0"

[node name="Button_pause" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("4")
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 28
text = "Пауза"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 322.0
offset_right = 637.0
offset_bottom = 47.0
theme_override_styles/panel = SubResource("5")

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 32
text = "Игровое время"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button_speed" to="." method="change_speed_of_game"]
[connection signal="pressed" from="VBoxContainer/Button_pause" to="." method="update_pause"]
